--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Application\Application.csproj" />
-    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <Folder Include="ValueObjects\" />
   </ItemGroup>
 
 </Project>
