--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
   	<PackageReference Include="MediatR" Version="12.2.0" />
 	<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.1" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ExchangeProviders\" />
