--- a/src/Presentation/appsettings.Development.json
+++ b/src/Presentation/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "Cache": "currency.converter.redis:6379"
+  },
+  "ProviderUrls": {
+    "FrankfurterBaseUrl": "https://api.frankfurter.dev/"
   }
 }
