--- a/src/Presentation/appsettings.Development.json
+++ b/src/Presentation/appsettings.Development.json
@@ -10,5 +10,10 @@
   },
   "ProviderUrls": {
     "FrankfurterBaseUrl": "https://api.frankfurter.dev/"
+  },
+  "Authentication": {
+    "Issuer": "currency.converter",
+    "Audience": "users",
+    "JwtSecret": "69fac991-79d0-4cb5-b552-3f23661aa127"
   }
 }
