--- a/src/Presentation/appsettings.Development.json
+++ b/src/Presentation/appsettings.Development.json
@@ -15,5 +15,28 @@
     "Issuer": "currency.converter",
     "Audience": "users",
     "JwtSecret": "69fac991-79d0-4cb5-b552-3f23661aa127"
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Seq"
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "Seq",
+        "Args": { "serverUrl": "http://currencyconverter.seq:5341" }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "CurrencyConverter.Api"
+    }
   }
 }
