--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -9,6 +9,7 @@
   	<PackageReference Include="MediatR" Version="12.4.1" />
 	<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.1" />
 	<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.1" />
+	<PackageReference Include="Serilog" Version="3.1.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
