--- a/src/Presentation/Presentation.csproj
+++ b/src/Presentation/Presentation.csproj
@@ -18,6 +18,9 @@
 	<PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.9.0" />
 	<PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
 	<PackageReference Include="Serilog.Sinks.Seq" Version="8.0.0" />
+	<PackageReference Include="Asp.Versioning.Http" Version="8.0.0" />
+	<PackageReference Include="Asp.Versioning.Mvc" Version="8.0.0" />
+	<PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
